# video2svg

./: .gitignore  Makefile  README.md  pyproject.toml
tests/: conftest.py  test_converter.py  test_frame_extractor.py  test_svg_builder.py
video-to-svg/: README.md  config.yaml  docker-compose.yml  example.py  main.py  requirements.txt  setup.py
video-to-svg/docker/: Dockerfile
video-to-svg/src/: converter.py
video-to-svg/tests/: test_converter.py
video-to-svg/video2svg/: __init__.py  cli.py  converter.py
video-to-svg/web/: index.html
video2svg/: __init__.py  cli.py  converter.py  frame_extractor.py  main.py  svg_builder.py  text_processor.py
